fix(chat): bound search cleanup and address review findings